<resources>
    <string name="app_name">Photopix</string>

    <string name="title">Photopix</string>
    <string name="subtitle">- Inspiration -</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="undo_all">Undo All</string>

    <string name="gallery">Gallery...</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="camera">Camera</string>
    <string name="edit">Edit</string>
    <string name="collage">Collage</string>

    <string name="edit1">Effects</string>
    <string name="edit2">Adjust</string>
    <string name="edit3">Rotate</string>
    <string name="edit4">Crop</string>
    <string name="edit5">Frame</string>

    <string name="effect1">Normal</string>
    <string name="effect2">Amaro</string>
    <string name="effect3">Brannan</string>
    <string name="effect4">Earlybird</string>
    <string name="effect5">Inkwell</string>
    <string name="effect6">Retro</string>
    <string name="effect7">Sierra</string>
    <string name="effect8">Toaster</string>
    <string name="effect9">Walden</string>
    <string name="effect10">Xproll</string>

    <string name="adjust1">Brightness</string>
    <string name="adjust2">Contrast</string>
    <string name="adjust3">Saturation</string>
    <string name="adjust4">Exposure</string>
    <string name="adjust5">WB</string>

    <string name="crop1">Custom</string>
    <string name="crop2">1:1</string>
    <string name="crop3">4:3</string>
    <string name="crop4">6:4</string>
    <string name="crop5">10:8</string>
    <string name="crop6">16:9</string>

    <string name="hue">H</string>
    <string name="saturation">S</string>
    <string name="value">V</string>

    <string name="free_style">Free</string>
    <string name="generateCollage">Generate Collages</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Pick From Gallery (Multiple)</string>

</resources>
