<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hsv_effects"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:fillViewport="true"
    android:measureAllChildren="false"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/innerLay_effects"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/effect1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect1_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />
            <TextView
                android:text="@string/effect1"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect2_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect2"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect3_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect3"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect4_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect4"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect5_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect5"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect6_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect6"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect7_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect7"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect8_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect8"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect9_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect9"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/effect10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myFilterView"
                android:id="@+id/effect10_btn"
                android:onClick="onClick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/effect10"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>