<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:fillViewport="true"
    android:measureAllChildren="false"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/innerLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/edit1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myMainView"
                android:id="@+id/edit1_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:src="@drawable/effects_btn"/>
            <TextView
                android:text="@string/edit1"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/edit2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myMainView"
                android:id="@+id/edit2_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:src="@drawable/adjust_btn"/>
            <TextView
                android:text="@string/edit2"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/edit3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myMainView"
                android:id="@+id/edit3_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:src="@drawable/rotate_btn"/>
            <TextView
                android:text="@string/edit3"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/edit4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myMainView"
                android:id="@+id/edit4_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:src="@drawable/crop_btn"/>
            <TextView
                android:text="@string/edit4"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/edit5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/myMainView"
                android:id="@+id/edit5_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:src="@drawable/frame_btn"/>
            <TextView
                android:text="@string/edit5"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>