<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/hue"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <jp.funnything.colorbar.HSVHueBarView
                android:id="@+id/hue"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/saturation"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <jp.funnything.colorbar.HSVSaturationBarView
                android:id="@+id/saturation"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/value"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <jp.funnything.colorbar.HSVValueBarView
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>