<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_image"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/txt_logo"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/camera_btn"
                android:background="@drawable/camera_btn" />

            <TextView
                android:text="@string/camera"
                android:textColor="#90000000"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/edit_btn"
                android:background="@drawable/edit_btn" />

            <TextView
                android:text="@string/edit"
                android:textColor="#90000000"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/collage_btn"
                android:background="@drawable/collage_btn" />

            <TextView
                android:text="@string/collage"
                android:textColor="#90000000"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
